Sun Nov 28 05:01:06 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): Not sure, but it seems
	  global_vm_waiting should also signaled here.  Maybe not.

Fri Nov 26 20:07:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_init2): Reference count should start from zero.
	  Otherwise a if statement can never examine if a vm has no
	  reference.

	* vm.c (vm_create): It turned out that vm->ref_count is
	  incremented twice per a VM creation, thus it never reaches to
	  zero again.  This is definitely a bug.

	* vm.c (ruby_vmptr_destruct): Likewise a vm->parent->ref_count
	  will never been decremented and hence a ref_count of a vm
	  experiencing a child creation can never reache to zero.  Also a
	  bug.

Fri Nov 26 18:37:49 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_initialize): Rewrite argv passage mechanism using
	  ruby's normal array/string APIs.  This is because vm->argv, when
	  created here, shall be freed _after_ the VM itself has been shut
	  down.  But a sad thing is vm->argv in general does not always
	  need to, because the argv passed to the process itself is out of
	  its scope.  Detecting whether a argv memory region is under
	  control of process-intermal memory manager is not easy (i.e. not
	  portable), so instead of managing argv by hand, I decided to
	  leave it to GC.  The key part is rb_ivar_set call, which enables
	  our GC engine to detect a relationship between a VM and its
	  argv.

Tue Nov 23 07:22:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ChangeLog (change-log-indent-text): hunging indent.

Wed Nov 24 20:09:36 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_start): ruby_threadptr_init will not create a
	  native thread.  Instead ruby_threadptr_create shall be
	  called here.

	* vm_core.h (ruby_threadptr_create): externed.

	* thread.c (ruby_threadptr_create): ditto.

Mon Nov  8 14:11:34 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
