@@ -1,3 +1,10 @@
+Mon Nov 29 09:55:40 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* vm_core.h (rb_vm_specific_ptr_for_specific_vm): added.
+
+	* include/ruby/vm.h (ruby_vm_specific_ptr): no need of vm to be
+	  passed.
+
 Sun Nov 28 05:01:06 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* eval.c (ruby_vm_cleanup): Not sure, but it seems
